Correct issue where new tabs start in wrong directories.

Currently, Konsole only updates the tab folder ~2 seconds.  After this
patch, when a new tab is requested the working directory is updated.

Patch by Christoph Feck.

BUG: 227156
FIXED-IN: 4.7